--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -128,7 +128,7 @@
 										
 										<div class="row profiledetail">
 											<div class="form-group col-md-6">
-												<p><label>Facility</label> USA Corporate Services</p>
+												<p><label>Facility</label> {{userData.facility_name}}</p>
 											</div>
 											<div class="form-group col-md-6">
 												<p><label>Device</label> Reception Room</p>
@@ -137,13 +137,13 @@
 										
 										<div class="row">
 											<div class="form-group col-sm-12 profiledetail">
-												<p><label>Name</label> Arnold</p>
-												<p><label>Phone</label> +1 212 1467 1212</p>
-												<p><label>E-mail</label> arnold@gmail.com</p>
-												<p><label>Address</label> 558 Margaret Street, LOS ANGELES, CA-90001, USA</p> 
-												<p><label>Country</label> USA</p>
-												<p><label>Status</label> Active</p>
-												<p><label>Expiration Date</label> 15/06/2017</p>
+												<p><label>Name</label> {{userData.user_first_name}} {{userData.user_last_name}}</p>
+												<p><label>Phone</label> {{userData.phone_code}}</p>
+												<p><label>E-mail</label> {{userData.user_email}}</p>
+												<p><label>Address</label> {{userData.user_address}}</p> 
+												<!-- <p><label>Country</label> {{userData.facility_name}}</p> -->
+												<p><label>Status</label> {{userData.user_status}}</p>
+												<p><label>Expiration Date</label> {{userData.user_expiration_date|date:'dd-MM-yyyy'}}</p>
 											</div>											
 										</div>
 										
