--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -158,28 +158,28 @@
 												<div class="row">										
 													<div class="form-group col-sm-6">
 														<p style="color:#3c8719"><label>Access Code</label></p>
-														<p><label>Code</label> xxxxx-xx-xx</p>
-														<p><label>Status</label> Active</p>	
+														<p><label>Code</label> {{userData.access_code}}</p>
+														<p><label>Status</label> {{userData.access_status}}</p>	
 													</div>
 													<div class="form-group col-sm-6 editprofile">
 														<p style="color:#3c8719"><label>Phone Code</label></p>
-														<p><label>Code</label> xxxxx-xx-xx</p>
-														<p><label>Status</label> Active</p>
-														<p><label>Phone</label> 919-938-0123</p>
+														<p><label>Code</label> {{userData.phone_code}}</p>
+														<p><label>Status</label> {{userData.phone_status}}</p>
+														<p><label>Phone</label> {{userData.phone_number_1}}</p>
 													</div>
 												</div>
 												<div class="row">										
 													<div class="form-group col-sm-6">
 														<p style="color:#3c8719"><label>RFID Code</label></p>
-														<p><label>Card Number</label> xxxxx-xx-xx</p>
-														<p><label>Facility Code</label> xxxxx-xx-xx</p>
-														<p><label>Status</label> Active</p>	
+														<p><label>Card Number</label> {{userData.rfid_card_number}}</p>
+														<p><label>Facility Code</label> {{userData.rfid_facility_code}}</p>
+														<p><label>Status</label> {{userData.rfid_sttaus}}</p>	
 													</div>
 													<div class="form-group col-sm-6 editprofile">
 														<p style="color:#3c8719"><label>BLE Code</label></p>
-														<p><label>Username</label> paracosmm</p>
-														<p><label>Password</label> xxxxx-xx-xx</p>
-														<p><label>Status</label> Active</p>
+														<p><label>Username</label> {{userData.ble_name}}</p>
+														<p><label>Password</label> {{userData.ble_pass}}</p>
+														<p><label>Status</label> {{userData.ble_status}}</p>
 													</div>
 												</div>
 											</div>											
@@ -201,15 +201,10 @@
 															</tr>
 														</thead>
 														<tbody>
-															<tr>
-																<td>24x7</td>
+															<tr ng-repeat="x in userGroup">
+																<td>{{x.usergroup_name}}</td>
 															</tr>
-															<tr>
-																<td>Office Hrs</td>
-															</tr>
-															<tr>
-																<td>Housekeeping Hrs</td>
-															</tr>
+															
 														</tbody>
 													</table>
 												</div>
@@ -231,18 +226,18 @@
 										<div class="row">
 											<div class="form-group col-sm-6">
 												<label for="first-name">First Name</label>
-												<input type="text" class="form-control" id="first-name" value="Arnold">
+												<input type="text" class="form-control" id="first-name" ng-value="userData.user_first_name">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="last-name">Last Name</label>
-												<input type="text" class="form-control" id="last-name" value="">
+												<input type="text" class="form-control" id="last-name" ng-value="userData.user_last_name">
 											</div>
 										</div>
 										
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="email">E-mail</label>
-												<input type="email" class="form-control" id="email" value="pcosm1245@gmail.com" readonly>
+												<input type="email" class="form-control" id="email" ng-value="userData.user_email" readonly>
 											</div>
 											<div class="form-group col-sm-6 editprofile">
 												<label for="profile">Profile Photo</label>
@@ -256,18 +251,18 @@
 										<div class="row">
 											<div class="form-group col-sm-6">
 												<label for="first-name">Phone Number</label>
-												<input type="text" class="form-control" id="first-name" value="212 1467 1212">
+												<input type="text" class="form-control" id="first-name" ng-value="userData.phone_number_1">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="address1">Address</label>
-												<input type="text" class="form-control" id="address1" value="558 Margaret Street, LOS ANGELES, CA-90001, USA">
+												<input type="text" class="form-control" id="address1" ng-value="userData.user_address">
 											</div>
 										</div>
 										
 										<div class="row">
 											<div class="form-group col-sm-12">
 												<label for="bio">Description</label>
-												<textarea class="form-control" id="bio" style="height:125px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</textarea>
+												<textarea class="form-control" id="bio" style="height:125px;">{{userData.description}}</textarea>
 											</div>
 										</div>
 										
@@ -275,14 +270,14 @@
 											<div class="form-group col-sm-6">
 												<label for="">Status</label><br/>
 												<div class="btn-group btnrounded" >
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+													<label class="btn btn-default" ng-model="userData.user_status" uib-btn-radio="1">Active</label>
+													<label class="btn btn-default" ng-model="userData.user_status" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
-											<div class="form-group col-sm-6 editprofile" ng-hide="radioModel=='Inactive'">
+											<div class="form-group col-sm-6 editprofile" ng-hide="userData.user_status==0">
 												<label for="">Expiration Date</label>
 												<div ng-controller="DatepickerDemoCtrl">
-													<input type="text" class="form-control" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
+													<input type="text" class="form-control" ng-value="userData.user_expiration_date" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
 												</div>
 											</div>
 										</div>
@@ -302,13 +297,13 @@
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="">Code</label>
-												<input type="text" class="form-control" id="" value="xxxxxx-xx">
+												<input type="text" class="form-control" id="" ng-value="userData.access_code">
 											</div>
 											<div class="form-group col-sm-6 editprofile">
 												<label for="">Status</label><br/>
 												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+													<label class="btn btn-default" ng-model="userData.access_status" uib-btn-radio="1">Active</label>
+													<label class="btn btn-default" ng-model="userData.access_status" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
 										</div>
@@ -322,13 +317,13 @@
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="">Code</label>
-												<input type="text" class="form-control" id="" value="xxxxxx-xx">
+												<input type="text" class="form-control" id="" ng-value="userData.phone_code">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="">Status</label><br/>
 												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+													<label class="btn btn-default" ng-model="userData.phone_status" uib-btn-radio="1">Active</label>
+													<label class="btn btn-default" ng-model="userData.phone_status" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
 										</div>
@@ -338,7 +333,7 @@
 												<label for="">Phone</label>
 												<div class="widget-todo" ng-controller="TodoWidgetCtrl">
 													<form class="form-horizontal" role="form" ng-submit="addTodo()">
-														<input type="text" class="form-control" id="todo" ui-jq="inputmask" ui-options="{'mask': '###-###-####'}" ng-model="todo" placeholder="" required>
+														<input type="text" class="form-control" id="todo" ui-jq="inputmask" ui-options="{'mask': '###-###-####'}" ng-model="userData.phone_status" placeholder="" required>
 														<button type="submit" class="btn addphone"><i class="fa fa-plus text-lg"></i></button>
 													</form>
 
@@ -366,11 +361,11 @@
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="">Card Number</label>
-												<input type="text" class="form-control" id="" value="xxxxxx-xx">
+												<input type="text" class="form-control" id="" ng-value="userData.rfid_card_number">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="">Facility Code</label>
-												<input type="text" class="form-control" id="" value="xxxxxx-xx">
+												<input type="text" class="form-control" id="" ng-value="userData.rfid_facility_code">
 											</div>
 										</div>
 										
@@ -378,8 +373,8 @@
 											<div class="form-group col-sm-6">
 												<label for="">Status</label><br/>
 												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+													<label class="btn btn-default" ng-model="userData.rfid_sttaus" uib-btn-radio="1">Active</label>
+													<label class="btn btn-default" ng-model="userData.rfid_sttaus" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
 										</div>
@@ -393,24 +388,24 @@
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="">Username</label>
-												<input type="text" class="form-control" id="" value="paracosmm">
+												<input type="text" class="form-control" id="" ng-value="userData.ble_name">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="">Password</label>
-												<input type="password" class="form-control" id="" value="xxxxxx-xx">
+												<input type="password" class="form-control" id="" ng-value="userData.ble_pass">
 											</div>
 										</div>
 										
 										<div class="row">
 											<div class="form-group col-sm-6">
 												<label for="">Confirm Password</label>
-												<input type="password" class="form-control" id="" value="xxxxxx-xx">
+												<input type="password" class="form-control" id="" ng-value="userData.ble_pass">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="">Status</label><br/>
 												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Active'">Active</label>
-													<label class="btn btn-default" ng-model="radioModel" uib-btn-radio="'Inactive'">Inactive</label>
+													<label class="btn btn-default" ng-model="userData.ble_status" uib-btn-radio="1">Active</label>
+													<label class="btn btn-default" ng-model="userData.ble_status" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
 										</div>
@@ -499,24 +494,13 @@
 															</tr>
 														</thead>
 														<tbody>
-															<tr>
-																<td>24x7</td>
+															<tr ng-repeat="x in userGroup">
+																<td>{{x.usergroup_name}}</td>
 																<td>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
+																	<button type="button" ng-click="deleteGroup(x.usergroup_id)" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
 																</td>
 															</tr>
-															<tr>
-																<td>Office Hrs</td>
-																<td>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
-															<tr>
-																<td>Housekeeping Hrs</td>
-																<td>
-																	<button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
-																</td>
-															</tr>
+															
 														</tbody>
 													</table>
 												</div>
