--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -204,7 +204,6 @@
 															<tr ng-repeat="x in userGroup">
 																<td>{{x.usergroup_name}}</td>
 															</tr>
-															
 														</tbody>
 													</table>
 												</div>
@@ -215,6 +214,7 @@
 							</uib-tab>
 							<uib-tab heading="Edit Profile">
 								<div class="wrap-reset"> 
+									<form ng-submit="submitEditUser(editUser)">
 									<div class="profile-settings"> 
 									
 										<div class="row">
@@ -226,18 +226,18 @@
 										<div class="row">
 											<div class="form-group col-sm-6">
 												<label for="first-name">First Name</label>
-												<input type="text" class="form-control" id="first-name" ng-value="userData.user_first_name">
+												<input type="text" class="form-control" id="first-name" ng-model="editUser.first_name" ng-value="userData.user_first_name">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="last-name">Last Name</label>
-												<input type="text" class="form-control" id="last-name" ng-value="userData.user_last_name">
+												<input type="text" class="form-control" id="last-name" ng-model="editUser.last_name" ng-value="userData.user_last_name">
 											</div>
 										</div>
 										
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="email">E-mail</label>
-												<input type="email" class="form-control" id="email" ng-value="userData.user_email" readonly>
+												<input type="email" class="form-control" id="email" ng-model="editUser.email" ng-value="userData.user_email" readonly>
 											</div>
 											<div class="form-group col-sm-6 editprofile">
 												<label for="profile">Profile Photo</label>
@@ -251,18 +251,18 @@
 										<div class="row">
 											<div class="form-group col-sm-6">
 												<label for="first-name">Phone Number</label>
-												<input type="text" class="form-control" id="first-name" ng-value="userData.phone_number_1">
+												<input type="text" class="form-control" id="first-name" ng-model="editUser.user_phone_no" ng-value="userData.phone_number_1">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="address1">Address</label>
-												<input type="text" class="form-control" id="address1" ng-value="userData.user_address">
+												<input type="text" class="form-control" id="address1" ng-model="editUser.address" ng-value="userData.user_address">
 											</div>
 										</div>
 										
 										<div class="row">
 											<div class="form-group col-sm-12">
 												<label for="bio">Description</label>
-												<textarea class="form-control" id="bio" style="height:125px;">{{userData.description}}</textarea>
+												<textarea class="form-control" id="bio" ng-model="editUser.description" style="height:125px;">{{userData.description}}</textarea>
 											</div>
 										</div>
 										
@@ -277,7 +277,7 @@
 											<div class="form-group col-sm-6 editprofile" ng-hide="userData.user_status==0">
 												<label for="">Expiration Date</label>
 												<div ng-controller="DatepickerDemoCtrl">
-													<input type="text" class="form-control" ng-value="userData.user_expiration_date" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
+													<input type="text" class="form-control" ng-model="editUser.expiration_date" ng-value="userData.user_expiration_date" id="mask02" ui-jq="inputmask" ui-options="{alias: 'mm/dd/yyyy'}">
 												</div>
 											</div>
 										</div>
@@ -297,13 +297,13 @@
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="">Code</label>
-												<input type="text" class="form-control" id="" ng-value="userData.access_code">
+												<input type="text" class="form-control" id="" ng-model="editUser.access_code">
 											</div>
 											<div class="form-group col-sm-6 editprofile">
 												<label for="">Status</label><br/>
-												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="userData.access_status" uib-btn-radio="1">Active</label>
-													<label class="btn btn-default" ng-model="userData.access_status" uib-btn-radio="0">Inactive</label>
+												<div class="btn-group btnrounded">
+													<label class="btn btn-default" ng-model="editUser.access_code_status" uib-btn-radio="1">Active</label>
+													<label class="btn btn-default" ng-model="editUser.access_code_status" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
 										</div>
@@ -317,13 +317,13 @@
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="">Code</label>
-												<input type="text" class="form-control" id="" ng-value="userData.phone_code">
+												<input type="text" class="form-control" id="" ng-value="editUser.phone_code">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="">Status</label><br/>
 												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="userData.phone_status" uib-btn-radio="1">Active</label>
-													<label class="btn btn-default" ng-model="userData.phone_status" uib-btn-radio="0">Inactive</label>
+													<label class="btn btn-default" ng-model="editUser.phone_code_status" uib-btn-radio="1">Active</label>
+													<label class="btn btn-default" ng-model="editUser.phone_code_status" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
 										</div>
@@ -331,24 +331,17 @@
 										<div class="row">										
 											<div class="form-group col-sm-6 editaddphone">
 												<label for="">Phone</label>
-												<div class="widget-todo" ng-controller="TodoWidgetCtrl">
-													<form class="form-horizontal" role="form" ng-submit="addTodo()">
-														<input type="text" class="form-control" id="todo" ui-jq="inputmask" ui-options="{'mask': '###-###-####'}" ng-model="userData.phone_status" placeholder="" required>
+												<div class="widget-todo" >
+													<div class="form-horizontal">
+														<input type="text" class="form-control" id="todo" ng-model="editUser.phone_numbers" placeholder="">
 														<button type="submit" class="btn addphone"><i class="fa fa-plus text-lg"></i></button>
-													</form>
-
-													<ul class="todo-list list-unstyled">
-													  <li ng-repeat="todo in todos" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
-														<div class="view">					 
-															<span ng-dblclick="editTodo(todo)">{{todo.text}}</span>
-															<a href="javascriph:;" class="text-danger remove-todo pull-right" ng-click="removeTodo(todo)" aria-label="Remove"><i class="fa fa-times"></i></a>
-														</div>
-														<form ng-submit="doneEditing(todo)">
-															<input class="form-control edit mb-0" ng-trim="false" ng-model="todo.text" ng-blur="doneEditing(todo)" todo-escape="revertEditing(todo)" todo-focus="todo == editedTodo" ui-jq="inputmask" ui-options="{'mask': '###-###-####'}">
-														</form>
-													  </li>
-													</ul>
+													</div>
 												</div>
+												
+												<!-- <form class="form-horizontal" role="form" ng-submit="addTodo()">
+												   <input type="text" class="form-control" id="todo" ui-jq="inputmask" ui-options="{'mask': '###-###-####'}" ng-model="todo" placeholder="" required>
+												   <button type="submit" class="btn addpost"><i class="fa fa-plus"></i></button>
+												</form> -->
 											</div>
 										</div>
 										
@@ -361,11 +354,11 @@
 										<div class="row">										
 											<div class="form-group col-sm-6">
 												<label for="">Card Number</label>
-												<input type="text" class="form-control" id="" ng-value="userData.rfid_card_number">
+												<input type="text" class="form-control" id="" ng-value="editUser.rfid_card_number">
 											</div>
 											<div class="form-group col-sm-6">
 												<label for="">Facility Code</label>
-												<input type="text" class="form-control" id="" ng-value="userData.rfid_facility_code">
+												<input type="text" class="form-control" id="" ng-value="editUser.rfid_facility_code">
 											</div>
 										</div>
 										
@@ -373,8 +366,8 @@
 											<div class="form-group col-sm-6">
 												<label for="">Status</label><br/>
 												<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
-													<label class="btn btn-default" ng-model="userData.rfid_sttaus" uib-btn-radio="1">Active</label>
-													<label class="btn btn-default" ng-model="userData.rfid_sttaus" uib-btn-radio="0">Inactive</label>
+													<label class="btn btn-default" ng-model="editUser.rfid_sttaus" uib-btn-radio="1">Active</label>
+													<label class="btn btn-default" ng-model="editUser.rfid_sttaus" uib-btn-radio="0">Inactive</label>
 												</div>
 											</div>
 										</div>
@@ -500,7 +493,6 @@
 																	<button type="button" ng-click="deleteGroup(x.usergroup_id)" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button>
 																</td>
 															</tr>
-															
 														</tbody>
 													</table>
 												</div>
@@ -564,12 +556,15 @@
 										
 										<div class="row">
 											<div class="form-group col-md-12 legend mt-20">
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
-												<button class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
+												<button onclick="window.history.back()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
+												<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
 											</div>
 										</div>
-										
-									</div>
+										<div class="row">
+											<p ng-repeat="m in masters">{{m}}</p>
+										</div>
+									</form>	
+								</div>
 
 								</div>
 							</uib-tab>
