--- a/views/tmpl/admin/device/device-details.html
+++ b/views/tmpl/admin/device/device-details.html
@@ -763,7 +763,7 @@
 												</div>
 												<div class="form-group col-sm-6">
 													<label for="">Technician </label><br/>
-													<select class="form-control" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.id"  ng-model="editDevice.device_technician_id">
+													<select class="form-control" ng-options="item.technician_id as item.technician_name for item in technicianList track by item.technician_id"  ng-model="editDevice.device_technician_id">
 														<option value="">Select</option>
 													</select>
 													<!--<small class="pull-right" style="margin-bottom:-5px;"><a ui-sref="app.admin.support.technician">Add Technician</a></small>-->
